put back in working view controller for events

--- a/ProjetEvent/EventViewController.xib
+++ b/ProjetEvent/EventViewController.xib
@@ -24,12 +24,20 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hmz-CY-zL0">
                     <rect key="frame" x="0.0" y="61" width="375" height="606"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="MPc-B9-SJU"/>
+                        <outlet property="delegate" destination="-1" id="6b6-3D-Djx"/>
+                    </connections>
                 </tableView>
                 <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UoJ-wY-gZZ">
                     <rect key="frame" x="0.0" y="17" width="375" height="44"/>
                     <items>
                         <navigationItem title="Title" id="bAP-ad-k8J">
-                            <barButtonItem key="leftBarButtonItem" title="Menu" id="Bsh-He-vpO"/>
+                            <barButtonItem key="leftBarButtonItem" title="Menu" id="Bsh-He-vpO">
+                                <connections>
+                                    <action selector="menu:" destination="-1" id="Hsj-Id-aLo"/>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem key="rightBarButtonItem" systemItem="add" id="R2W-md-W8b"/>
                         </navigationItem>
                     </items>
